--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,8 @@ dmypy.json
 *.log
 logs/
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
