--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,11 @@
 services:
    my-rag-app:
     build: .
-    env_file: .env
+    env_file:
+      - .env
     ports:
-      - "8000:8000"
+      - "${PORT:-8080}:${PORT:-8080}"
     volumes:
       - ./static:/app/static:ro
     restart: unless-stopped
-    command: uvicorn server.server:app --host 0.0.0.0 --port 8000 --reload
+    command: sh -c "uvicorn server.server:app --host 0.0.0.0 --port ${PORT:-8080} "
