--- a/.gitignore
+++ b/.gitignore
@@ -73,5 +73,6 @@ logs/
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
+.ebextensions/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
