--- a/.gitignore
+++ b/.gitignore
@@ -74,5 +74,6 @@ logs/
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 .ebextensions/*
+!.ebextensions/00-port.config
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
