--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,5 @@ services:
       - "${PORT:-8080}:${PORT:-8080}"
     volumes:
       - ./static:/app/static:ro
-    restart: unless-stopped
-    command: sh -c "uvicorn server.server:app --host 0.0.0.0 --port ${PORT:-8080} "
+    restart: on-failure
+    command: sh -c "uvicorn src.server:app --host 0.0.0.0 --port ${PORT:-8080} "
