--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 # Pytest configuration file
-testpaths = server/tests
+testpaths = tests
 pythonpath = .
 python_files = test_*.py
 python_classes = Test*
