adjust readme for cicd deploying

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,20 @@
-OPENAI_API_KEY=<your key>
-LANGCHAIN_API_KEY=<your key>
+#AGENT KEYS
+OPENAI_API_KEY=<your_key>
+TAVILY_API_KEY=<your_key>
+YOUTUBE_API_KEY=<your_key>
+REDDIT_CLIENT_ID=<your_id>
+REDDIT_CLIENT_SECRET=<your_key>
+
+#LANGCHAIN
+LANGCHAIN_API_KEY=<your_key>
 LANGCHAIN_TRACING_V2=true
 LANGCHAIN_PROJECT=multiagent-rag-app
+
+#MONGO:
+MONGODB_API_PASSWORD=<your_key>
+MONGODB_API_USER=<your_user>
+MONGODB_DB_NAME=<your_cluster_name>
+MONGODB_URI=<your_uri>
+PORT=8080
+
+LOG_LEVEL=INFO
