update permetion to static folder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     ports:
       - "${PORT:-8080}:${PORT:-8080}"
     volumes:
-      - ./static:/app/static:ro
+      - ./static:/app/static:rw
     restart: on-failure
     command: sh -c "uvicorn src.server:app --host 0.0.0.0 --port ${PORT:-8080} "
