--- a/.github/workflows/deploy-eb.yml
+++ b/.github/workflows/deploy-eb.yml
@@ -1,10 +1,14 @@
 name: Deploy to Elastic Beanstalk (Docker)
 
+permissions:
+  contents: read
+  secrets: read
+  
 on:
   push:
     branches:
       - main
-
+  
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -12,6 +16,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1   # change if needed
 
 
       - name: Set up Python
@@ -32,12 +43,7 @@ jobs:
       - name: Generate deployment package (zip)
         run: zip -r deploy.zip . -x "*.git*"
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1   # change if needed
+     
 
       - name: Upload ZIP to S3
         run: |
